# fzfbiblio

./: CHANGELOG.md  LICENSE  README.md  fzfbiblio.cabal  test.bib  test1.bib
src/: Bib.hs  Main.hs
