cabal-version:      3.0
name:               fzfbiblio

-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.0.0.0

synopsis: A small fzf-based front end for a bibtex pdf collection.

description: This script provides one part of a simple bibliography management system based on bibtex. If you maintain one global `.bib` file for the metatdata, and name your pdf files the same as your bibtex entries, then you can use this script to search for and open those documents via `fzf`.

author:             Sean Watters
maintainer:         sean.watters@strath.ac.uk
copyright:          c. Sean Watters, 2024.
license:            MIT
license-file:       LICENSE

category:           System
build-type:         Simple
extra-doc-files:    README.md

executable fzfbiblio
    main-is:          Main.hs
    other-modules:    Bib
    build-depends:    base >=4.17.2.1, text, attoparsec, process
    ghc-options: -Wall -fno-warn-unused-do-bind -O2
    hs-source-dirs:   src
    default-language: Haskell2010
